--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,9 +6,10 @@
     <string name="your_name">Your name</string>
     <string name="your_email">Your Email</string>
     <string name="cart_item_successfully_deleted_message">Cart successfully deleted!</string>
-    <string name="cart_success_message"><![CDATA[%1$s has been added to your cart.]]></string>
+    <string name="cart_success_message"><data> <b>%1$s</b> has \n been added to your cart.</data></string>
     <string name="no_cart_item_found_message">Your cart is currently empty!</string>
     <string name="cart_total">$%d</string>
+    <string name="total">Pay $%d</string>
     <string name="cart">Cart</string>
     <string name="checkout">Checkout</string>
     <string name="cart_description_message">Click here to continue shopping.</string>
@@ -17,4 +18,10 @@
     <string name="terms_and_condition_is_required_error_message">Terms and condition is required.</string>
     <string name="first_name_error_message">First name must not be empty.</string>
     <string name="email_must_not_be_empty">Email must not be empty.</string>
+    <string name="your_order_has_been_process">Your order has \nbeen processed</string>
+    <string name="your_order_success_message">Your order has been successfully placed! Thank you for choosing us. We\'re on it! 🚀</string>
+    <string name="has_been">has been</string>
+    <string name="added_to_your_cart">added to your cart</string>
+    <string name="your_order_id_is">Your order ID is</string>
+    <string name="return_to_products">Return to Products</string>
 </resources>
